fix toggle alignment

--- a/frontend/src/metabase/ui/components/inputs/Switch/Switch.module.css
+++ b/frontend/src/metabase/ui/components/inputs/Switch/Switch.module.css
@@ -23,7 +23,7 @@
 
   .body {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
   }
 
   &[data-variant="stretch"] {
